# sio-cli

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs
