[package]
name = "rust_socketio_cli"
version = "0.1.0"
edition = "2018"

[dependencies]
rust_socketio = { git = "https://github.com/1c3t3a/rust-socketio.git", branch = "main" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
structopt = "0.3"
clap = "3.0.0-beta.5"


[[bin]]
name = "rust_socketio_cli"
path = "src/main.rs"
